Hide g_condition_wait_source, use GLib style convention

https://bugs.freedesktop.org/show_bug.cgi?id=44570